--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -3,35 +3,35 @@ In this chapter we will discuss related work on tamper-proof interaction histori
 
 \section{Bitcoin}
 Bitcoin is a digital currency that uses a interaction history 
-to keep tracks of transactions made between nodes.
-The interaction history is a datastructure and called within Bitcoin the block chain.
+to keep track of transactions made between nodes.
+The interaction history is a datastructure called the block chain.
 
-Using a block chain limits Bitcoin in several ways.
+The block chain imposes limits on Bitcoin in several ways.
 These limitations on Bitcoin can be seen as the initial motivation for our work.
 How Bitcoin uses the block chain technology will be introduced first.
-After that the limitations imposed by the block chain will be explained.
+In the following, the limitations imposed by the block chain will be explained.
 
 We will only introduce how Bitcoins uses the block chain and why it does so in such a way.
 This section is not a full explanation of the Bitcoin protocol
 and only discusses relevant parts of the Bitcoin protocol.
 The best starting point for a full explanation of Bitcoins 
 is the original paper by Nakamoto\cite{Nakamoto-bitcoin}.
-Further information and improvements can be found on the Bitcoin website\cite{Bitcoin.org-site}.
+Further information and improvements on Bitcoin can be found on the Bitcoin website\cite{Bitcoin.org-site}.
 
 \subsection{Block Chain}
-For a currency to work, people have to be able to trust that no double spending can occur.
-With physical tokens it is impossible to double spend,
-but the guarantee is not trivial for digital currencies without a trusted third party.
+For a currency to work, people have to be able to trust with a reasonable certainty that no double spending can occur.
+Double spending With physical tokens is impossible,
+but the same guarantee is not trivial for digital currencies without a trusted third party.
 Bitcoin has multiple safe gaurds that work together to prevent double spending.
-These safe gaurds will be mentioned during the explanation of how Bitcoin works.
+These safe gaurds will be introduced during the explanation of how Bitcoin works.
 
 The core of the Bitcoin protocol is the block chain.
 The block chain contains every transaction of bitcoins.
-
 A transaction consists of three parts.
-The public key of the new owner of the bitcoin,
-the hash of combination of the previous transaction together with the public key of the new owner,
-and the signature of the hash of the current owner.
+The first part is the public key the new owner of the bitcoin.
+The hash of the whole, previous transaction and the public key of the new owner is concatenated.
+This concatenation is hashed and this hash is the second part of the transaction.
+The third final part is signature by the current owner of the hash of the concatenation.
 The previous transaction is a transaction of the same bitcoin.
 The ownership of the bitcoin by the current owner can be verified
 by verifying the whole history of the bitcoin.
@@ -43,24 +43,26 @@ A transaction is usually shortend to Tx in Bitcoin related work and is used in i
 \end{figure}
 
 Multiple transactions are aggregrated into a single block.
-The next block is chained to the previous block by adding the hash of the previous block.
-Transaction chains span several blocks inside the block chain.
+Every block contains the hash of the previous block.
+This creates the block chain.
+Transaction chains across span several blocks inside the block chain.
 
 These blocks are created by nodes in the network, so called miners.
 A miner receives transactions from other nodes in the Bitcoin network.
-But the transactions are received in a non deterministic way induced by network characteristics.
-The non deterministic nature causes blocks to differ from miner to miner.
-The order of transactions has to be agreed upon by the network to eliminate this inconsistency.
-
 An attacker can malicously transmit transactions to double spend a bitcoin he owns or does not have.
 So every transaction is verified on arrival at a node.
 Any transaction that is invalid is just dropped by the node.
 No penalty is awarded to the malicous attacker.
 
-Bitcoin uses election based upon Proof-Of-Work system.
+The transactions are received in a non deterministic way induced by network characteristics.
+The non deterministic nature causes blocks to differ from miner to miner.
+The order of transactions has to be agreed upon by the network to eliminate this inconsistency.
+
+Bitcoin uses election to pick the next block  based upon a Proof-Of-Work system.
 A nonce is added to every block. 
 This nonce is just a number that can be varied,
-but is only sound if the result of the hash of the whole block starts with a certain number of zeros.
+but is only sound if the hash of the whole block starts with a certain number of zeros.
+Miners have to find the correct nonce for their block and this is a proof of work.
 
 \begin{figure}[H]
         \centerline{\includegraphics[scale=0.3]{problemDescription/figs/blocks.eps}}
@@ -72,28 +74,28 @@ and notify parts of the network of their newly found block.
 This leaves the network again in an inconsisted state.
 These multiple versions of the next block attached to the previous block can be seen as branches.
 
-To solve this inconsistency, Bitcoin nodes save every branch and continue working on the longest branch.
-At first the node will favor the first received branch and continue working on that branch
-At some point one branch will become predominant in the network
-and more nodes will dedicate compute power to extend this branch in comparison to other branches.
-Blocks will be found at a faster rate for this branch
-and the branch will be adopted by the network as a whole.
+To solve this inconsistency, Bitcoin nodes save both branches and continue using the longest branch.
+At some point one branch will become predominant in the network.
+More nodes will dedicate compute power to extend this branch and the growth rate will increase for this branch.
+The faster growth rate will ensure that the branch will be adopted by the network as a whole.
 
-The amount of zeros is adjusted to compensate for the increasing speed of being able to find nonces, due to increasing computational power.
+The amount of zeros needed in the hash is adjusted to compensate for the fluctuating speed of the network to be able to find nonces.
+In the bitcoin network the speed has increased dramatically.
 The amount of zeros balances the probability of branches occuring
 and the time before a new block is found,
 which in turn is how fast transactions are processed.
 
-Another way to double spend a bitcoin is by sending a transaction to one part of the network,
+Another possible attack to double spend a bitcoin is by sending a transaction to one part of the network,
 but to the other part of the network a transaction with a different receipient.
-It can happen that both transactions will at first be processed into a block.
-Eventually one branch will one and double spending is averted.
+It is possible that both transactions will be introduced into the block chain, but in different branches by two independend miners.
+Eventually one branch will win and the attack is averted.
 
 The behaviour just described makes that a transaction can never be confirmed with full certainty.
 Another branch could possibly always over take the current longest branch.
-This also makes the system susceptible if more compute power is owned by a malicous attacker then honest node, even if it is only 51\%. 
-In the end the current branch can be overtaken
-and the whole transaction history can be rewritten by the attacker.
+This also makes the network vulnerable if the total compute power is owned by a malicous attacker is more than the total compute power of the honest nodes, 
+even if the attack has control of 51\% of the compute power. 
+In the end the current branch can be overtaken by a new branch started by the attacker.
+This new branch allows the whole transaction history to be rewritten by the attacker.
 Bitcoin introduces points in the chain that are to be considered final and can no longer change.
 
 \subsection{Limitations}
@@ -118,7 +120,7 @@ The size and growth can be seen in figure \ref{fig:bc-size}.
 
 The size of the block chain at time of writing already prevents less powerfull devices
 to operate on the block chain.
-This problem is only going to become bigger with the continued creation of transaction
+This problem is only going to become bigger with the continued creation of transactions
 and at a faster pace due to increased adoption of Bitcoin.
 
 This problem was already identified by Nakamoto in his original paper on Bitcoin.
@@ -127,11 +129,11 @@ In SPV mode a node only downloads the block headers of the longest chain.
 If a transaction is to be verified, it requests from the network the specific transaction
 along with a Merkle tree linking it to a block in the chain.
 The Merkle tree can be used to verify that the transaction was included into the block chain.
-This gives reason that with some confidence the transaction was accepted.
+This allows to calculate with some confidence that the transaction was accepted.
 
 SVP only gives reasonable confidence and is not as secure as running a full node.
-Trust has to be placed in the nodes that send the block haders and merkle trees.
-Secondly, a transaction that took place in a more recent block is less difficult to tamper with
+Trust has to be placed in the nodes that send the block headers and Merkle Trees.
+Secondly, a transaction that is recorded in a more recent block is less difficult to tamper with
 than a transaction deep down in the block chain.
 This is only an acceptable solution for clients willing to accept more risk due to having a less secure system.
 Therefor it is not a solution for the problem for every one.
