RelatedWork: fixed hashspeed source.

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -96,3 +96,11 @@
       year = {2014},
       howpublished ={\url{https://blockchain.info/charts/blocks-size}}
 }
+
+@MISC{Blockchain.info-hashspeed,
+      author = {Blockchain.info},
+      title = {Block chain size},
+      month = {March},
+      year = {2015},
+      howpublished ={\url{https://blockchain.info/charts/hash-rate}}
+}
