--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -89,7 +89,7 @@ The growth of the hash speed can be seen in \ref{fig:hash-speed}.
 
 \begin{figure}[H]
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/hashspeed/hashspeed.eps}}
-        \caption{Amount of hashes calculated per second in the Bitcoin network.\cite{Blockchain.info-bcs}}
+        \caption{Amount of hashes calculated per second in the Bitcoin network.\cite{Blockchain.info-hashspeed}}
 	\label{fig:hash-speed}
 \end{figure}
 
