RelatedWork: * Standardized size of graphs * Added difficulty * Changed hash rate graph to all time.

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -99,8 +99,16 @@
 
 @MISC{Blockchain.info-hashspeed,
       author = {Blockchain.info},
-      title = {Block chain size},
+      title = {Hash rate},
       month = {March},
       year = {2015},
       howpublished ={\url{https://blockchain.info/charts/hash-rate}}
+}
+
+@MISC{Blockchain.info-difficulty,
+      author = {Blockchain.info},
+      title = {Difficulty},
+      month = {March},
+      year = {2014},
+      howpublished ={\url{https://blockchain.info/charts/Difficulty}}
 }
