RelatedWork: added estimation remark for hash rate.

--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -85,14 +85,14 @@ The hash rate of the Bitcoin network has increased nine fold.
 The amount of zeros balances the probability of branches occuring
 and the time before a new block is found,
 which in turn is how fast transactions are processed.
-The amount of zeros can be seen as the difficulty of finding the new block.
+The amount of zeros can be seen as the difficulty of finding the a block.
 More zeros decreases the likelyhood a nonce will be valid.
-he growth of the hash speed can be seen in \ref{fig:hash-speed},
+The growth of the estimated hash rate can be seen in \ref{fig:hash-speed},
 and the difficulty in \ref{fig:hash-difficulty}.
 
 \begin{figure}[H]
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/hashspeed/hashspeed.eps}}
-        \caption{Amount of hashes calculated per second in the Bitcoin network.\cite{Blockchain.info-hashspeed}}
+        \caption{Estimated amount of hashes calculated per second in the Bitcoin network.\cite{Blockchain.info-hashspeed}}
 	\label{fig:hash-speed}
 \end{figure}
 
