Problem Description: fixed thrust instead of trust.

--- a/problemDescription/problemDescription.tex
+++ b/problemDescription/problemDescription.tex
@@ -95,7 +95,7 @@ But distribution is worth mentioning, because it puts constraints on the interac
 The interaction history has to be distributable in an efficient manner.
 Only if it meets these constraints, will an interaction history be usable in a distributed system.
 
-\section{Tamper-proof to facilitate thrust}
+\section{Tamper-proof to facilitate trust}
 
 Interaction histories only prevent direct abuse of the generosity of the nodes.
 A malicious node can still try to tamper with the interaction history.
