Design: added exchange signature section

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -112,3 +112,13 @@
       year = {2014},
       howpublished ={\url{https://blockchain.info/charts/Difficulty}}
 }
+
+
+@incollection{asokan-fairexchange,
+  title={Optimistic fair exchange of digital signatures},
+  author={Asokan, Nadarajah and Shoup, Victor and Waidner, Michael},
+  booktitle={Advances in Cryptology—EUROCRYPT'98},
+  pages={591--606},
+  year={1998},
+  publisher={Springer}
+}
