--- a/thesis.tex
+++ b/thesis.tex
@@ -73,8 +73,9 @@
 %Problem description
 \input{problemDescription/problemDescription.tex}
 %Related work
-\input{relatedWork/relatedWork}
-
+\input{relatedWork/relatedWork.tex}
+%Design
+\input{design/design.tex}
 
 % BIBLIOGRAPHY
 \bibliographystyle{bib/latex8}
