Updated: - introduction, preface and problem description with Tribler references. - added acknowledgements

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,11 @@
 \chapter{Introduction}
 \label{chp:introduction}
-TODO INTRODUCTION
+Tribler is a peer-to-peer file sharing program developed by the Delft University of Technology for research purposes.
+Tribler expands the Bittorrent protocol and has added multiple improvements on this protocol.
+The main focus of Tribler is to make security and privacy the default for Internet users and impossible to shutdown.
+A fully distributed program, not relying on any central component, is needed to achieve this.
+Tribler has been designed and build using this methodoly\cite{Pouwelse-tribler}\cite{Bakker-tribler}.
+This master thesis was conducted as part of the research mission to improve Tribler.
 
 \vspace{1\baselineskip}
 
