--- a/preface.tex
+++ b/preface.tex
@@ -1,16 +1,36 @@
 \chapter*{Preface}
 \addcontentsline{toc}{chapter}{Preface}
-TODO MOTIVATION FOR RESEARCH TOPIC
+The huge increase in Bitcoin adoption, 
+due to the increase in uncertainty in the security of traditional currency 
+after the financial crisis in 2008, 
+is only rivaled by the speculation of the enormous possibilities 
+of the underlying technology of the blockchain.
+The blockchain is the first technology, seen with real world adoption,
+that allows to register transactions without a trusted third party.
+But the blockchain has several limitations in scalabillity 
+that will limit Bitcoins in fully replacing traditional currencies with a digital currency.
+It also limits blockchain as a scalable basis for a large scale reputation system, 
+similair to a digital currency, with vast amounts of transactions.
+This motivated to research the properties and possibilities of a variant of the blockchain:
+multichain.
 
 \vspace{1\baselineskip}
 
 \noindent
-TODO ACKNOWLEDGEMENTS
+I would like to acknowledge several people that helped me during my master thesis.
+First I would to heartly thank dr.ir. Johan Pouwelse for his mentoring and helping me in setting goals and achieving these goals in a timely manner.
+Furthermore I would like to thank dr.ir. Cor-Paul Bezemer for his guidance and help with implementing within Tribler. 
+I also would like to thank Elric Milon and Lipu Fei for answering countless questions and problems I encountered durng the programming phase of my thesis.
+For the excellent feedback and help to improve my code I would like to thank dr.ir. Niels Zeilemaker.
+I am also very thankful for the companionship I felt within my work room 
+and I would like to thank especially Hans Bogerts BSc, Niels Doekeijmeier BSc and Ernst van der Hoeven BSc.
+You certainly made my work more enjoyable.
+Lastly I want to thank the trainers at the Sports and Culture Centre of the Delft University of Technology for giving an challenging outlet outside of my master thesis.
 
 \vspace{1\baselineskip}
 
 \noindent
-TODO AUTHOR
+Steffan Derk Norberhuis
 
 \vspace{1\baselineskip}
 
