--- a/problemDescription/problemDescription.tex
+++ b/problemDescription/problemDescription.tex
@@ -7,7 +7,7 @@ In this chapter the problem will be described of how to decide to react to a pee
 The problem will first be explained in a simplified form.
 Using this simplification, the problem will be transformed gradually
 to the real world problem faced in distributed systems today.
-Finally several real world examples of the problem will be described.
+Finally, in this chapter it will be described how Tribler specifically faces this problem. 
 
 \section{Deciding to help}
 Nodes can decide to cooperate with a peer or decide not to help a peer and defect.
@@ -112,23 +112,36 @@ but still a reasonable certainty can be achieved that no tampering of the intera
 Reasonable certainty is for example that no attack can happen 
 if more than half of the network consists of honest nodes.
 
-\section{Real world examples}
-In this section we will describe real world problems of the problem type introduced.
-This is meant as an illustration of the real world problems and is not a complete survey.
+\section{Tribler}
+In peer-to-peer file sharing a node called a seeder uploads parts 
+of a file to another node, the downloader. 
+The role of being a seeder and downloader constantly changes 
+and a node can be both at the same time for different, parallel connections.
+A seeder can become a downloader when they wish to download other files
+and downloaders can become seeders,
+if they posses a file someone else wants.
+The ratio between the total size downloaded and uploaded is called the seeding ratio\cite{Cohen-bittorrent}.
+private community source
 
-Ad hoc networks are networks that rely on the willingness of nodes to cooperate
-and forward messages to each other.
-These messages are forwarded at a cost to the node.
-For example, the cost can be the power consumption, 
-which is limited due to the node running on battery power.
-Energy efficiency becomes a prime concern for these node. 
-Every node may not display the same willingness to forward messages and be more selfish.
-Protocols that use currency or reputation are already proposed
-for this problem\cite{Anderegg-AdHoc}.
+The uploading can be seen as an interaction of one node helping another node.
+These interactions comes at the cost of consuming bandwidth for both parties.
+There is only direct benefit for the downloader.
+The downloader receives a file he wants.
+There is no direct barter between the seeder and downloader.
+As the seeder does not get anything in return for uploading the file.
+Although it can happen by chance that a downloader is also a seeder directly to the original seeder,
+but this is unlikely\cite{Lai-Incentives}.
 
-In BitTorrent networks nodes help each other to download files by sharing chunks of files.
-Especially in these networks are interactions with the same node infrequent\cite{Lai-Incentives}.
-Cooperating nodes should receive more aid in the form of higher download speed,
-then the nodes that feed upon the network and contribute no upload speed to the network.
-It has been shown that in these network
-free riding takes place in large quantities\cite{Adar-Freeriding}.
+If everyone contributes, files become more available and are downloaded at higher speed.
+This claim is supported by measurements taken in private communities
+\cite{meulpolder-privatecommunities}.
+In private communities high seeding ratio's are enforced by a third party. 
+Both high availability and high download speeds result in a higher utility for the downloaders.
+But currently freeriding in these networks takes places in high quantities\cite{Adar-Freeriding}, 
+The BitTorrent Tit-for-Tat protocol is not enough to stop abuse\cite{Pouwelse-tribler}.
+
+Tribler wants to achieve a high global seeding ratio by making it benificial to have such a ratio.
+Nodes can award each other with higher cooperation if a node has a reputation itself to be cooperative.
+This requires for a tamper-proof interaction history to base a reputation on in a network.
+Those contributing more receive more help in return, 
+and malicious nodes cannot abuse the network by tampering with the interaction history.
