--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -1,3 +1,17 @@
+@book{VanderLubbe-crypto,
+  title={Basic methods of cryptography},
+  author={Van Der Lubbe, Jan CA and Lubbe, Jan CA},
+  year={1998},
+  publisher={Cambridge University Press}
+}
+
+@mscthesis{Plak-anonymous,
+  title={Anonymous Internet: Anonymizing peer-to-peer traffic using applied cryptography},
+  author={Plak, RS},
+  year={2014},
+  school={TU Delft, Delft University of Technology}
+}
+
 @article{Nowak-PrisonerDilemma,
   title={The evolution of stochastic strategies in the prisoner's dilemma},
   author={Nowak, Martin and Sigmund, Karl},
