--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -1,7 +1,7 @@
 \chapter{Related Work}
 In this chapter we will discuss related work on tamper-proof interaction histories.
 
-\section{Bitcoin}
+\section{Blockchain}
 Bitcoin is a digital currency that uses a interaction history 
 to keep track of transactions made between nodes.
 The interaction history is a datastructure called the block chain.
