Design: exchange: added figs and citation to Dispersy

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -12,6 +12,14 @@
   school={TU Delft, Delft University of Technology}
 }
 
+@article{zeilemaker-dispersy,
+  title={Dispersy bundle synchronization},
+  author={Zeilemaker, Niels and Schoon, Boudewijn and Pouwelse, Johan},
+  journal={TU Delft, Parallel and Distributed Systems},
+  year={2013}
+}
+
+
 @article{Nowak-PrisonerDilemma,
   title={The evolution of stochastic strategies in the prisoner's dilemma},
   author={Nowak, Martin and Sigmund, Karl},
