Preface: updated thanks Relatedwork: removed [H]

--- a/preface.tex
+++ b/preface.tex
@@ -22,6 +22,10 @@ First I would to heartly thank dr.ir. Johan Pouwelse for his mentoring and helpi
 Furthermore I would like to thank dr.ir. Cor-Paul Bezemer for his guidance and help with implementing within Tribler. 
 I also would like to thank Elric Milon and Lipu Fei for answering countless questions and problems I encountered durng the programming phase of my thesis.
 For the excellent feedback and help to improve my code I would like to thank dr.ir. Niels Zeilemaker.
+His support by adding functionality to Dispersy was also invaluable.
+Rob Ruigrok was doing his master thesis at the same time
+and helped me to avoid problems he encountered before I experienced them aswell and
+I am gratefull for this help.
 I am also very thankful for the companionship I felt within my work room 
 and I would like to thank especially Hans Bogerts BSc, Niels Doekeijmeier BSc and Ernst van der Hoeven BSc.
 You certainly made my work more enjoyable.
