--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -37,7 +37,7 @@ The ownership of the bitcoin by the current owner can be verified
 by verifying the whole history of the bitcoin.
 A transaction is usually shortend to Tx in Bitcoin related work and is used in images in this report.
 
-\begin{figure}[H]
+\begin{figure}
 	\centerline{\includegraphics[scale=0.3]{relatedWork/figs/transactions.eps}}
 	\caption{Transaction chain}
 \end{figure}
@@ -64,7 +64,7 @@ This nonce is just a number that can be varied,
 but is only sound if the hash of the whole block starts with a certain number of zeros.
 Miners have to find the correct nonce for their block and this is a proof of work.
 
-\begin{figure}[H]
+\begin{figure}
         \centerline{\includegraphics[scale=0.3]{relatedWork/figs/blocks.eps}}
         \caption{Block chain}
 \end{figure}
@@ -90,13 +90,13 @@ More zeros decreases the likelyhood a nonce will be valid.
 The growth of the estimated hash rate can be seen in \ref{fig:hash-speed},
 and the difficulty in \ref{fig:hash-difficulty}.
 
-\begin{figure}[H]
+\begin{figure}
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/hashspeed/hashspeed.eps}}
         \caption{Estimated amount of hashes calculated per second in the Bitcoin network.\cite{Blockchain.info-hashspeed}}
 	\label{fig:hash-speed}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/difficulty/difficulty.eps}}
 	\caption{Amount of zeros needed in the hash.\cite{Blockchain.info-difficulty}}
 	\label{fig:hash-difficulty}
@@ -129,7 +129,7 @@ No block or data contained in that block is removed.
 The block chain has been growing since its inception in 2009.
 The size and growth can be seen in figure \ref{fig:bc-size}.
 
-\begin{figure}[H]
+\begin{figure}
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/blockchainsize/blockchainsize.eps}}
         \caption{The size of the block chain.\cite{Blockchain.info-bcs}}
 	\label{fig:bc-size}
