--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -87,8 +87,8 @@ and the time before a new block is found,
 which in turn is how fast transactions are processed.
 The amount of zeros can be seen as the difficulty of finding the a block.
 More zeros decreases the likelyhood a nonce will be valid.
-The growth of the estimated hash rate can be seen in \ref{fig:hash-speed},
-and the difficulty in \ref{fig:hash-difficulty}.
+The growth of the estimated hash rate can be seen in Figure: \ref{fig:hash-speed},
+and the difficulty in Figure: \ref{fig:hash-difficulty}.
 
 \begin{figure}
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/hashspeed/hashspeed.eps}}
@@ -127,7 +127,7 @@ This results in that a node needs the entire block chain to verify a transaction
 The block chain is a data structure ever increasing in size.
 No block or data contained in that block is removed.
 The block chain has been growing since its inception in 2009.
-The size and growth can be seen in figure \ref{fig:bc-size}.
+The size and growth can be seen in figure Figure: \ref{fig:bc-size}.
 
 \begin{figure}
         \centerline{\includegraphics[scale=0.6]{relatedWork/figs/blockchainsize/blockchainsize.eps}}
